--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.4"
 
 services:
   php:
+    container_name: symfony-docker-bigcommerce-php
     build:
       context: .
       target: app_php
@@ -25,6 +26,7 @@ services:
       MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeMe!}
 
   caddy:
+    container_name: symfony-docker-bigcommerce-caddy
     build:
       context: .
       target: app_caddy
